# parallel-algorithms

./: CMakeLists.txt  Integral  README.md  integration  integration.c  make_plot.py  parallel_integration.c  results.txt  run_integration.sh  run_parallel_integration.sh
